made attendance overview dynamic, implemented changing month, added details on overview